# Agent

./: Cargo.toml  Makefile  README.md  cli.go  go.mod  handler.go  requests.go  streams.go
cmd/inlama/: main.go
src/: cli.rs  config.rs  handler.rs  main.rs  requests.rs  streams.rs
