[package]
name = "inlama"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for integrating LLMs into Unix-style pipes"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/inlama-rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
shellexpand = "3.1"
dirs = "5.0"
env_logger = "0.10"
log = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
